--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
                 <nav>
                     <ul id="mainMenu">
                         <li>Accueuil</li>
-                        <li>Rayons</li>
+                        <li>Programme</li>
                         <li>Contact</li>
-                        <li>Comment venir ?</li>
+                        <li>Rejoindre la lutte !</li>
                     </ul>
                 </nav>
             </header>
@@ -57,7 +57,12 @@
                     <div class="cliches" style="background-image: url('jean5.jpg')"></div>
                     <div class="cliches" style="background-image: url('jean6.jpg')"></div>
                 </div>
-                <div id="mes_amis"></div>
+                <div id="mes_amis">
+                    <h3>Liens utiles</h3>
+                    <ul>
+                        <li></li>
+                    </ul>
+                </div>
             </footer>
         </div>
     </div>
